Sidebar: ensured non-opaque table items don't overlap
Fixes #4040.

--- a/pootle/static/css/style.css
+++ b/pootle/static/css/style.css
@@ -531,6 +531,7 @@ td.stats-name a:hover > i + span,
     bottom: 0;
     right: 0;
     width: 0;
+    z-index: 1;
 
     background-color: #fff;
 
